--- a/src/app.html
+++ b/src/app.html
@@ -5,8 +5,16 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+		<style>
+			body {
+				width: 100vw;
+				height: 100vh;
+				padding: 0;
+				margin: 0;
+			}
+		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div style="display: contents;">%sveltekit.body%</div>
 	</body>
 </html>
